Renamed all the notebooks and an order for the consultation is given.

--- a/Notebook 01 - Intro to Pandas.ipynb
+++ b/Notebook 01 - Intro to Pandas.ipynb
@@ -7,7 +7,7 @@
     "id": "Au7ZT3gc-tAy"
    },
    "source": [
-    "# Notebook #1\n",
+    "# Notebook 1\n",
     "## Introduction to Pandas\n",
     "\n",
     "Inspired to the tutorial available [here](https://pandas.pydata.org/pandas-docs/stable/tutorials.html).\n",
